Move all code and dependencies related to database and web from Lib to App. Use MapStruct to map between datatypes in Lib and Entity and Response classes in App.